--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,15 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: MM
-email:
+title: Kaj H.P. Stolle
+email: k.h.p.stolle@tue.nl
 description: >- # this means to ignore newlines until "baseurl:"
+  PhD Student in Assistive Vibrotactile Technology for Navigation at Eindhoven University of Technology.
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-twitter_username: username
-github_username: username
+#twitter_username: username
+github_username: KajSto
 minimal_mistakes_skin: default
 search: true
 
@@ -58,34 +59,43 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "First Lastname"
-  avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  name   : "Kaj H.P. Stolle"
+  avatar : "/assets/images/Stolle_Kaj_IEIS.jpg"
+  bio    : "PhD Student in Assistive Vibrotactile Technology for Navigation at Eindhoven University of Technology."
   links:
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+    - label: "University"
+      icon: "fas fa-fw fa-flask" #Change to TU/e!
+      url: "https://research.tue.nl/nl/persons/kaj-hp-stolle/"
+    - label: "OrcID"
+      icon: "fas fa-fw fa-book" #Change to Orc!!
+      url: "https://orcid.org/0009-0005-9672-4605"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin-square"
+      url: "www.linkedin.com/in/kaj-stolle-311a2420a" 
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
+      url: "https://github.com/KajSto"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://www.instagram.com/kajlikesstuff/"
 
 footer:
   links:
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+    - label: "University"
+      icon: "fas fa-fw fa-flask" #Change to TU/e!
+      url: "https://research.tue.nl/nl/persons/kaj-hp-stolle/"
+    - label: "OrcID"
+      icon: "fas fa-fw fa-book" #Change to Orc!!
+      url: "https://orcid.org/0009-0005-9672-4605"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin-square"
+      url: "www.linkedin.com/in/kaj-stolle-311a2420a"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
+      url: "https://github.com/KajSto"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://www.instagram.com/kajlikesstuff/"
 
 defaults:
   # _posts
