--- a/_config.yml
+++ b/_config.yml
@@ -71,13 +71,13 @@ author:
       url: "https://orcid.org/0009-0005-9672-4605"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
-      url: "www.linkedin.com/in/kaj-stolle-311a2420a" 
+      url: "https://linkedin.com/in/kaj-stolle-311a2420a"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/KajSto"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://www.instagram.com/kajlikesstuff/"
+ #   - label: "Instagram"
+ #     icon: "fab fa-fw fa-instagram"
+ #     url: "https://www.instagram.com/kajlikesstuff/"
 
 footer:
   links:
@@ -88,14 +88,14 @@ footer:
       icon: "fas fa-fw fa-book" #Change to Orc!!
       url: "https://orcid.org/0009-0005-9672-4605"
     - label: "LinkedIn"
-      icon: "fab fa-fw fa-linkedin-square"
-      url: "www.linkedin.com/in/kaj-stolle-311a2420a"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://linkedin.com/in/kaj-stolle-311a2420a"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/KajSto"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://www.instagram.com/kajlikesstuff/"
+  #  - label: "Instagram"
+  #    icon: "fab fa-fw fa-instagram"
+  #    url: "https://www.instagram.com/kajlikesstuff/"
 
 defaults:
   # _posts
