--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 #twitter_username: username
 github_username: KajSto
-theme: minimal-mistakes-jekyll
-minimal_mistakes_skin: "dirt" # "default" "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin: "contrast"
 search: true
 
 # Build settings
